fixed more whitespaces

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -373,9 +373,9 @@
             max-height: 100%;
             background: transparent;
             table-layout: fixed;
-            width: 100%;
+
             &.screenshot {
-                height:80%;
+                height: 80%;
             }
         }
 
